# nGPT-pytorch

./: README.md  pyproject.toml  train.py
nGPT_pytorch/: __init__.py  evo.py  nGPT.py  nGPTExperimental.py  nTransformer.py  quasi_nGPT.py
